Ready to write RCM

--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,47 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-09-03 13:16:29 -0500 
+%% Created for Evan Bollig at 2013-09-03 19:44:07 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Stocco2009,
+	Author = {Stocco, L.J. and Schrack, G.},
+	Date-Added = {2013-09-04 00:43:59 +0000},
+	Date-Modified = {2013-09-04 00:44:07 +0000},
+	Doi = {10.1109/TC.2008.171},
+	Issn = {0018-9340},
+	Journal = {Computers, IEEE Transactions on},
+	Keywords = {database indexing;matrix multiplication;spatial data structures;Cartesian coordinate;U-order;X-order;Z-order;base value;data encryption;graphic rendering;location code;matrix multiplication;spatial indexing;spatial order;Arithmetic;Computer applications;Computer graphics;Cryptography;Equations;Indexing;Interleaved codes;Matrix converters;Rendering (computer graphics);Table lookup;Algorithm design and analysis;Constructive solid geometry;Numerical algorithms;Volumetric},
+	Number = {3},
+	Pages = {424-432},
+	Title = {On Spatial Orders and Location Codes},
+	Volume = {58},
+	Year = {2009},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/TC.2008.171}}
+
+@inproceedings{Mokbel2002,
+	Acmid = {585179},
+	Address = {New York, NY, USA},
+	Author = {Mokbel, Mohamed F. and Aref, Walid G. and Kamel, Ibrahim},
+	Booktitle = {Proceedings of the 10th ACM international symposium on Advances in geographic information systems},
+	Date-Added = {2013-09-03 21:50:19 +0000},
+	Date-Modified = {2013-09-03 21:50:25 +0000},
+	Doi = {10.1145/585147.585179},
+	Isbn = {1-58113-591-2},
+	Location = {McLean, Virginia, USA},
+	Numpages = {6},
+	Pages = {149--154},
+	Publisher = {ACM},
+	Series = {GIS '02},
+	Title = {Performance of multi-dimensional space-filling curves},
+	Url = {http://doi.acm.org/10.1145/585147.585179},
+	Year = {2002},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/585147.585179},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/585147.585179}}
 
 @inproceedings{Stocco1995,
 	Author = {Stocco, L. and Schrack, G.},
@@ -62,7 +97,7 @@
 	Author = {I. Johnson},
 	Date-Added = {2013-08-30 04:39:52 +0000},
 	Date-Modified = {2013-08-30 04:48:31 +0000},
-	Howpublished = {\emph{Electronic Theses, Treatises and Dissertations}. Paper 4931. },
+	Howpublished = {\emph{Electronic Theses, Treatises and Dissertations}. Paper 4931.},
 	Month = {November},
 	School = {Florida State University},
 	Title = {Real-Time Particle Systems in the Blender Game Engine},
